crates/flight-rules/tests/snapshots/snapshot_tests__snapshot_and_compound_rule.snap
---
source: crates/flight-rules/tests/snapshot_tests.rs
expression: snap
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - JumpFalse: 8
  - LoadVar: 1
  - LoadConst: 200
  - Compare: Less
  - And
  - JumpFalse: 10
  - Action: 0
variable_map:
  gear_down: 0
  speed: 1
actions:
  - LedOn:
      target: GEAR
stack_size: 8
