crates/flight-rules/tests/snapshots/snapshot_tests__snapshot_empty_ruleset.snap
---
source: crates/flight-rules/tests/snapshot_tests.rs
expression: snap
---
instructions: []
variable_map: {}
actions: []
stack_size: 8
