crates/flight-rules/tests/snapshots/snapshot_tests__snapshot_simple_boolean_rule.snap
---
source: crates/flight-rules/tests/snapshot_tests.rs
expression: snap
---
instructions:
  - LoadVar: 0
  - LoadConst: 0
  - Compare: NotEqual
  - JumpFalse: 5
  - Action: 0
variable_map:
  gear_down: 0
actions:
  - LedOn:
      target: indexer
stack_size: 8
